Update Context Aware:  Ubicacion sugerida reunion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MarketAndes</string>
+    <string name="api_key">AIzaSyDGHyu2Rx2NjsflJl9tViMhMkEfiJ7a5A0</string>
 </resources>
